# JFWE

./: .gitignore  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
japan-financial-world/: README.md
japan-financial-world/data/sample/: assets.yaml  banks.yaml  contracts.yaml  firms.yaml  investors.yaml  markets.yaml
japan-financial-world/docs/: answer_surface.md  architecture.md  architecture_v0.md  architecture_v1.md  behavioral_gap_audit.md  case_study_001_attention_crowding_uncited_stress.md  case_study_002_investor_mandate_attention_context.md  fwe_reference_demo_design.md  model_mechanism_inventory.md  naming_policy.md  ontology.md  performance_boundary.md  product_architecture.md  public_private_boundary.md  public_prototype_plan.md  research_note_002_validating_stress_citation_graphs_without_price_prediction.md  scope.md  test_inventory.md  v0_release_summary.md  v0_scope.md  v1_10_universal_engagement_and_response_design.md  v1_12_endogenous_attention_loop_summary.md  v1_13_generic_settlement_infrastructure_summary.md  v1_14_corporate_financing_intent_design.md  v1_15_securities_market_intent_aggregation_design.md  v1_15_securities_market_intent_summary.md  v1_16_endogenous_market_intent_direction_design.md  v1_16_endogenous_market_intent_feedback_summary.md  v1_17_ui_report_temporal_display_design.md  v1_18_scenario_driver_library_design.md  v1_19_local_run_bridge_and_temporal_profiles_design.md  v1_20_monthly_scenario_reference_universe_summary.md  v1_23_substrate_hardening_validation_foundation.md  v1_24_manual_annotation_layer.md  v1_25_institutional_investor_mandate_benchmark_pressure.md  v1_26_entity_lifecycle_reporting_calendar_foundation.md  v1_27_generic_relationship_network_annotation_provenance.md  v1_28_scale_substrate_event_log_columnar_merkle.md  v1_29_trace_edge_citation_graph.md  v1_9_living_reference_world_plan.md  (+15 more)
japan-financial-world/docs/autopilot/: v1_24_tov1_25_autopilot.md
japan-financial-world/docs/roadmap/: fwe_core_public_release.md  fwe_reference_demo.md  jfwe_proprietary_calibration.md  jfwe_public_calibration.md  to_c_demo_later.md
japan-financial-world/examples/reference_world/: README.md  living_world_manifest.py  living_world_replay.py  manifest.py  regime_comparison_report.py  replay_utils.py  run_endogenous_chain.py  run_living_reference_world.py
japan-financial-world/examples/reference_world/configs/: README.md  base.yaml
japan-financial-world/examples/tools/: refresh_test_inventory.py  run_v1_28_scale_smoke.py
japan-financial-world/examples/ui/: README.md  fwe_workbench_mockup.html  preview.html  sample_living_world_manifest.json
japan-financial-world/schemas/: investor.yaml  market.yaml  property_market.yaml
japan-financial-world/spaces/: base.py
japan-financial-world/spaces/banking/: README.md  space.py
japan-financial-world/spaces/corporate/: README.md  space.py  state.py
japan-financial-world/spaces/exchange/: README.md  space.py  state.py
japan-financial-world/spaces/information/: README.md
japan-financial-world/spaces/investors/: README.md  space.py
japan-financial-world/spaces/policy/: README.md  space.py  state.py
japan-financial-world/spaces/real_estate/: README.md
japan-financial-world/tests/: test_attention.py  test_attention_crowding_case_study.py  test_audit_trace_queries.py  test_bank_space_integration.py  test_bank_state.py  test_capital_structure.py  test_citation_graph_projection.py  test_corporate_financing.py  test_corporate_space_integration.py  test_corporate_state.py  test_display_timeline.py  test_engagement.py  test_event_bus.py  test_event_log_columnar.py  test_event_log_manifest_sidecar.py  test_event_log_merkle.py  test_event_log_polars.py  test_event_log_projection.py  test_event_log_query.py  test_event_log_scale_smoke.py  test_event_log_schema.py  test_event_log_writer.py  test_evidence_resolver.py  test_exchange_space_integration.py  test_exchange_state.py  test_experiment_config.py  test_external_space_integration.py  test_external_state.py  test_financing_paths.py  test_firm_state.py  test_industry_conditions.py  test_information_space_integration.py  test_information_state.py  test_interbank_liquidity.py  test_investor_intent.py  test_investor_mandate_case_study.py  test_investor_mandate_export.py  test_investor_mandate_readout.py  test_investor_mandates.py  test_investor_space_integration.py  (+60 more)
japan-financial-world/tests/fixtures/inter_reviewer/: README.md  example_reviewer_note.yaml
japan-financial-world/world/: README.md  attention.py  audit_trace_queries.py  capital_structure.py  citation_graph_projection.py  clock.py  constraints.py  contracts.py  corporate_financing.py  display_timeline.py  engagement.py  event_bus.py  event_log_columnar.py  event_log_merkle.py  event_log_polars.py  event_log_projection.py  event_log_query.py  event_log_schema.py  event_log_writer.py  events.py  evidence.py  experiment.py  financing_paths.py  firm_state.py  forbidden_tokens.py  ids.py  industry.py  interbank_liquidity.py  investor_intent.py  investor_mandate_case_study.py  investor_mandate_export.py  investor_mandate_readout.py  investor_mandates.py  kernel.py  ledger.py  living_world_report.py  loader.py  manual_annotation_export.py  manual_annotation_provenance.py  market_environment.py  (+34 more)
memory/: MEMORY.md  feedback_auto_commit_push.md
